--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,6 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example
-spring.datasource.username=user
-spring.datasource.password=tasd
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.profiles.active= test
+spring.datasource.platform=test
