docker compose file added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/db_micro
+spring.datasource.url=jdbc:mysql://${MYSQL_ADDRESS}:${MYSQL_PORT}/db_micro
 spring.datasource.username=root
 spring.datasource.password=tasd
 spring.datasource.testWhileIdle=true
